[gd_scene load_steps=5 format=3 uid="uid://cbo0benqviesh"]

[ext_resource type="Script" path="res://src/EnemyBody.gd" id="1_e4avk"]
[ext_resource type="Texture2D" uid="uid://4yxwdvo0c76c" path="res://assets/ship_A.png" id="1_i7x6f"]

[sub_resource type="CircleShape2D" id="CircleShape2D_16bg3"]
radius = 17.0

[sub_resource type="SpriteFrames" id="SpriteFrames_todgu"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_i7x6f")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="EnemyBody" type="Node2D"]
script = ExtResource("1_e4avk")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_16bg3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_todgu")
frame_progress = 0.52508

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 19.0
offset_bottom = 40.0

[node name="LifeRect" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 0
anchor_left = -0.325
anchor_top = -0.475
anchor_right = 0.325
anchor_bottom = -0.45
color = Color(0, 1, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="DmgRect" type="ColorRect" parent="CanvasLayer/Control"]
layout_mode = 0
anchor_left = -0.325
anchor_top = -0.475
anchor_right = 0.325
anchor_bottom = -0.45
color = Color(1, 0, 0, 1)
metadata/_edit_use_anchors_ = true
